# MPQDraft

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  risky-commits.md
.github/workflows/: windows-build.yml
MPQDraft/: MPQDraft.cpp  MPQDraft.h  MPQDraft.rc  MPQDraft.vcproj  MPQDraft.vcxproj  MPQDraft.vcxproj.filters  PluginLoader.cpp  PluginLoader.h
MPQDraft/DLL/: MPQDraftDLL.h  MPQDraftDLL.vcproj  MPQDraftDLL.vcxproj  MPQDraftDLL.vcxproj.filters  Patcher.cpp
MPQDraft/Stub/: MPQStub.cpp  MPQStub.vcxproj
MPQDraft/cli/: MPQDraftCLI.cpp  MPQDraftCLI.h  MPQDraftCommandParser.cpp
MPQDraft/gui/: BitmapDialog.cpp  CommonPages.cpp  CommonPages.h  MainMenu.cpp  ProgressWnd.cpp  SEMPQWizard.cpp  dib256.cpp  dibpal.cpp  patchwizard.cpp
qt/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  build.sh  setup-qt-mingw.sh
qt/resources/: mpqdraft.qrc
qt/src/: gamedata_qt.h  main.cpp  mainwindow.cpp  mainwindow.h  patchwizard.cpp  patchwizard.h  pluginpage.cpp  pluginpage.h  sempqwizard.cpp  sempqwizard.h
qt/src/common/: SempqCreatorMock.cpp  SempqCreatorMock.h  common.h  gamedata.cpp  gamedata.h  gamedetection.cpp  gamedetection.h  mpqdraftplugin.h  pluginloader.cpp  pluginloader.h  sempq_creator.cpp  sempq_creator.h
qt/src/core/: gamedata.cpp  gamedetection.cpp  gamedetection.h  pluginmanager.cpp  pluginmanager.h  sempqparamsbuilder.cpp  sempqparamsbuilder.h
qt/toolchain/: mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
src/: CMakeLists.txt  MPQDraft.rc  MPQDraft.sln  MPQDraft.vcproj  MPQDraft.vcxproj  MPQDraft.vcxproj.filters  MPQDraftCLI.rc  MPQDraftCLI.vcxproj  MPQDraftCLI.vcxproj.filters  afxres.h  stdafx.h  version_rc.h.in
src/app/: MPQDraft.cpp  MPQDraft.h  PluginLoader.cpp  PluginLoader.h  SEMPQCreator.cpp  SEMPQCreator.h  gamedata.cpp  gamedata.h  resource_ids.h
src/app/cli/: CommandParser.cpp  CommandParser.h  MPQDraftCLI.cpp  MPQDraftCLI.h  MPQDraftCommandParser.cpp  MPQDraftCommandParser.h  main_cli.cpp  main_cli.h  stdafx_cli.cpp  stdafx_cli.h  version.h  version.h.in
src/app/gui/: BitmapDialog.cpp  BitmapDialog.h  CommonPages.cpp  CommonPages.h  GameDataAdapter.cpp  GameDataAdapter.h  MainMenu.cpp  MainMenu.h  ProgressWnd.cpp  SEMPQWizard.cpp  SEMPQWizard.h  dib256.cpp  dibpal.cpp  gamedata_qt.h  main.cpp  main.h  main_gui.cpp  main_gui.h  mainwindow.cpp  patchwizard.cpp  patchwizard.h  pluginpage.cpp  pluginpage.h  resource.h  sempqwizard.cpp  sempqwizard.h  stdafx_gui.cpp  stdafx_gui.h
src/app/gui/common/: SempqCreatorMock.h  patcher.h
src/app/gui/core/: pluginmanager.cpp  pluginmanager.h
src/app/gui/helpers/: gamedata_qt.h  sempqparamsbuilder.cpp  sempqparamsbuilder.h
src/app/gui/resources/: mpqdraft.qrc
src/common/: QDebug.cpp  QDebug.h  QHookAPI.cpp  QInjectDLL.cpp  QResource.cpp
src/core/: Common.cpp  Common.h  GameData.cpp  GameData.h  GameDetection.cpp  GameDetection.h  GameRegistry.h  LegacyGameRegistry.cpp  MPQDraftPlugin.h  PatcherApi.h  PatcherFlags.h  PluginManager.cpp  PluginManager.h
src/dll/: ExceptionHandlers.cpp  MPQDraftDLL.cpp  MPQDraftDLL.h  MPQDraftDLL.rc  MPQDraftDLL.vcproj  MPQDraftDLL.vcxproj  MPQDraftDLL.vcxproj.filters  Patcher.cpp  Patcher.h  PatcherLimits.h  PluginServer.cpp  stdafx.h
src/sempq/: SEMPQCreator.cpp  SEMPQCreator.h  SEMPQData.h
src/sempq/stub/: MPQStub.cpp  MPQStub.vcproj  MPQStub.vcxproj  MPQStub.vcxproj.filters  Stub.rc
src/stub/: MPQStub.cpp  MPQStub.vcproj  MPQStub.vcxproj  MPQStub.vcxproj.filters  stdafx.h
tools/: build-mingw32.sh  generate-evb.ps1  mingw-w64-i686.cmake
